fix header, works better on small

--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,12 @@
 
 .App-header {
   background-color: #222;
-  height: 75px;
   padding: 10px;
   color: white;
+}
+
+.App-header .page-header {
+	border-bottom: none;
 }
 
 .App-header h1 {
